--- a/demo/src/button-launch.css
+++ b/demo/src/button-launch.css
@@ -2,6 +2,8 @@
   background-image: url('../../public/button.svg');
   height: 80px;
   width: 250px;
-  margin: -140px auto 0 auto;
+  margin: -260px auto 0 auto;
   display: block;
+  z-index: 10;
+  position: relative;
 }
